# MSCS

./: .gitignore  AWSUrl  GRADUATION CHECK FOR GRADUATE STUDY_ver2_ZR_031815.doc  changed.txt
CAP6673MachineLearningAndDataMining/: ChristopherFoley_03_15_summary.odt  ChristopherFoley_03_22_summary.docx  ChristopherFoley_03_29_Summary.docx  ChristopherFoley_04_05_Summary.docx  ChristopherFoley_04_12_summary.docx  ChristopherFoley_HWK01.odt  ChristopherFoley_HWK02.odt  ChristopherFoley_HWK03.odt  ChristopherFoley_HWK04.odt  FIT.arff  FIT.csv  FIT2.arff  FIT3.arff  FIT3.csv  TEST.arff  TEST2.arff  TEST2.csv  TEST3.arff  TEST3.csv  weka_commands.sh
CAP6776 - Information and Data Retrieval/: 1126730.acsm  28179_4435248_lecture+week1.pptx  28179_4441139_CAP6776+Fall+2017.docx  28179_4786862_Lecture+week+2.pptx  28179_6608678_Lecture+4-ranking.ppt  28179_6916746_lecture+week+4-evaluation.ppt  28179_6971155_lecture-textcat-nbayes.ppt  28179_7022755_lecture14-SVMs.ppt  28179_7116299_lecture-clustering+1.ppt  CFCAP6776Project.docx  CFCAP6776Project.odt  Wumpus-CautionaryTale.odp  hw4data-docs4sum.arff  wumpusoutput.txt
CEN5035SoftwareEngineering/: .~lock.CFEduSnap Use Case Dispatcher.doc#  CFEduSnap Use Case Dispatcher.doc  Cameo Enterprise Architecture Resource Guide(1).docx  EduSnap Use Case Dispatcher.doc  (+6 more)
CIS5371-Practical Aspects of Modern Cryptography/CIS5371-Project/models/: CMakeLists.txt  DES.cpp  DES.h  Makefile  cmake_install.cmake  models.pro
CIS5371-Practical Aspects of Modern Cryptography/CIS5371-Project/models/DESobjects/: des.cpp  des.h
CIS5371-Practical Aspects of Modern Cryptography/CIS5371-Project/models/ElGamalobjects/: ElGamal.h
(+628 files in other folders)
